--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,3 +8,7 @@ spring:
     driverClassName: org.h2.Driver
     #db文件位置
     url: jdbc:h2:file:${db.location};AUTO_SERVER=TRUE
+#logging:
+#  level:
+#    org:
+#      jline: debug
